<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidRTC</string>
    <string name="host">192.168.0.106</string>
    <string name="port">3000</string>
    <string name="action_settings">Options</string>
    <string name="dialog_calling">%1$s is calling ……</string>
    <string name="dialog_answer">Answer</string>
    <string name="dialog_hangup">Hangup</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="gps">Location</string>
    <string name="screen">Screen</string>
    <string name="title">Register and share your HW capabilities</string>
    <string name="regserver"></string>
    <string name="regport"></string>
    <string name="register">Register</string>
    <string name="punch">Fingerprint Punch</string>
    <string name="roomID">Please input ID of the room</string>
    <string name="registerHint">Register to room:</string>
    <string name="roomCode">Please input code of the room</string>
    <string name="userName">Please input name of the device</string>
</resources>
